--- a/Project Development Phase/Sprint 1/static_css/Main.css
+++ b/Project Development Phase/Sprint 1/static_css/Main.css
@@ -1,23 +1,31 @@
-body {
+body 
+{
     text-align:center;
     background-color: rgb(161, 187, 213);
 }
 
- button{float:left ;
-    
+button
+{
+    float:left ;    
 }
-p {
+
+p 
+{
     color: white;
     font-family: Shanti;
     font-size: 1.2em;
     display: inline-block;
     margin:  20px;
 }
-img {
+
+img 
+{
     margin: 60px 0 30px 0;
     width: 250px;
 }
-input {
+
+input 
+{
   width: 300px;
   margin: 20px 20px;
   height: 50px;
@@ -28,18 +36,21 @@ input {
   text-align: center;
 }
 
-input:focus {
+input:focus 
+{
     outline: none;
     border: solid 5px #00FFCE;
 }
 
-#greet {
+#greet 
+{
     background-color: rgb(27, 193, 132);
     border:  none;
     width:  200px;
     color: white;
 }
 
-#greet:hover {
+#greet:hover 
+{
     background-color: rgb(21, 219, 91);
 }
