--- a/Project Development Phase/Sprint 2/templates/index.html
+++ b/Project Development Phase/Sprint 2/templates/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inventory Management System for Retailers </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 
@@ -19,21 +18,11 @@
       </div>
 
       <ul class="list-unstyled components">
-        <li class="active">
-          <a href="#">Dashboard</a>
-        </li>
-        <li>
-          <a href="#">Add Item</a>
-        </li>
-        <li>
-          <a href="#">Pages</a>
-        </li>
-        <li>
-          <a href="#">Delete Items</a>
-        </li>
-        <li>
-          <a href="#">Help</a>
-        </li>
+        <li class="active"><a href="#">Dashboard</a></li>
+        <li><a href="#">Add Item</a></li>
+        <li><a href="#">Pages</a></li>
+        <li><a href="#">Delete Items</a></li>
+        <li><a href="#">Help</a></li>
       </ul>
     </nav>
     <div id="content">
@@ -52,27 +41,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
-                    </a>
-                    <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                    </ul>
-                </li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
                 </ul>
             </div>
         </div>
