--- a/Project Development Phase/Sprint 2/templates/login.html
+++ b/Project Development Phase/Sprint 2/templates/login.html
@@ -19,12 +19,10 @@
                 <input type="password" class="form-control" name="password_1" required />
             </div>
             <input type="submit" value="submit" class="btn btn-primary my-4 mt-2 mx-4" />
-
         </form>
-        <p>Don't have an account?<a href="{{ url_for('signup') }}"> Sign Up</a>
+        <p>Don't have an account?<a href="{{ url_for('signup') }}"> Sign Up</a></p>
     </div>
 </main>
-</p>
 
 </main>
 {% endblock%}
